fix broken course scraper